src/objects/URL__c.object
<CustomObject>
    <fields>
        <fullName>Friendly__c</fullName>
        <description>The Public URL which will display in a web browser instead of the Actual URL.</description>
        <inlineHelpText>The Public URL which will display in a web browser instead of the Actual URL.</inlineHelpText>
        <label>Display URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipName>URLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Real__c</fullName>
        <description>This is the actual, static URL which needs to be rewritten.</description>
        <inlineHelpText>This is the actual, static URL which needs to be rewritten.</inlineHelpText>
        <label>Actual URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Rewrite__c</fullName>
        <formula>&quot;Rewrite &quot;&amp;Real__c&amp;&quot; WITH &quot;&amp; Friendly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Rewrite Name</label>
        <type>Text</type>
    </fields>
    <label>URL</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Real__c</columns>
        <columns>Friendly__c</columns>
        <columns>URL_Rewrite__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>URL-{00000}</displayFormat>
        <label>URL Rewrite Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>URLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>